package HW8;

public interface Barrier {
    boolean isRunnable(int maxRun);

    boolean isJumpable(int maxJump);
}
