package HW8;

public interface Competitor {
    int getMaxRun();

    int getMaxJump();

    void run();

    void jump();
}
