package HW8;

public class Robot {
}
